--- a/config/languages/ru.json
+++ b/config/languages/ru.json
@@ -103,29 +103,6 @@
 	},
 	"components": {
 		"modals": {
-			"bugReport": {
-				"title": "ПОИСК БАГОВ",
-				"reportSent": "Ваш отчёт успешно отправлен разработчику",
-				"userReport": {
-					"reportFrom": "Отчёт от {{userId}}",
-					"reportDetails": {
-						"title": "Ваш отчёт об ошибке",
-						"description": "Благодарим вас за отправку отчёта об ошибке! Вот детали:"
-					},
-					"userId": "ID пользователя",
-					"reportId": "ID отчёта",
-					"reportTitle": "Баг",
-					"reportDescription": "Описание"
-				},
-				"reportTitleInput": {
-					"label": "Причина отправки отчёта",
-					"placeholder": "Введите описание найденной ошибки"
-				},
-				"reportDescriptionInput": {
-					"label": "Подробное описание проблемы",
-					"placeholder": "Пожалуйста, предоставьте подробное описание того, что некорректно работает у бота"
-				}
-			},
 			"setNameTempChannel": {
 				"title": "Изменить имя канала",
 				"label": "Введите новое имя канала",
@@ -154,6 +131,10 @@
 					"label": "Количество участников для поиска",
 					"placeholder": "От 1 до 9",
 					"invalidNumberMessage": "Пожалуйста, введите корректное число для поля количества участников"
+				},
+				"activityPingRole": {
+					"label": "Роль",
+					"roleNotFoundMessage": "{{{warningEmoji}}} Роль на сервере не найдена"
 				},
 				"activityInfo": {
 					"playersField": "Участники",
@@ -232,10 +213,10 @@
 	"myServer": {
 		"embeds": {
 			"infoAboutServer": {
-				"title": "Добро пожаловать на наш сервер",
-				"description": "Здесь вы сможете не только отдохнуть и обсудить все насущные темы, но также пригласить друзей и поддержать создателя нашего бота, посмотрев его трансляции на Twitch.",
+				"title": "Добро пожаловать сервер Игрова Иллюзия!",
+				"description": "Здесь вы найдете идеальное место для общения, обсуждения и игры ваших любимых видеоигр. Присоединяйтесь к нашему дружелюбному сообществу, где вы сможете найти единомышленников, обменяться опытом, получить советы и даже найти новых друзей для совместной игры.\n\n Не упустите возможность поддержать создателя нашего сервера, следите за его трансляциями на Twitch и будьте в курсе последних новостей и событий в мире игр.\n\n Присоединяйтесь к нам и начните новое приключение вместе с нами.",
 				"fields": {
-					"links": "- [Присоединиться к серверу Discord](https://discord.gg/woiolife)\n- [Следить за трансляциями на Twitch](https://twitch.tv/drafwod)"
+					"links": "- [Присоединиться к серверу Discord](https://discord.gg/gameillusion)\n- [Следить за трансляциями на Twitch](https://twitch.tv/drafwod)"
 				}
 			},
 			"serverRules": {
@@ -251,13 +232,9 @@
 					"title": "Личные данные",
 					"description": "Никакого слива личных данных  одного пользователя другим пользователем. Если не было получено согласие."
 				},
-				"adultContentEmbed": {
-					"title": "18+ контент",
-					"description": "Для 18+ контента у нас на сервере имеется отдельный чат, где вы можете обсуждать темы непристойного характера без всяких ограничений: <#1031739471571451965>."
-				},
-				"streamingBehaviorEmbed": {
-					"title": "Поведение на стриме",
-					"description": "Никаких запрещённых слов, за которые стример может отлететь в бан. Это правило касается любого стрима, который проходит в настоящее время."
+				"gameCommunity": {
+					"title": "Игровое сообщество",
+					"description": "Для поиска людей на игры, используйте только отведенные роли с играми. Например <@&1220061049269522462>"
 				},
 				"reportToUsEmbed": {
 					"title": "Сообщите нам",
